Fix broken index styling

--- a/symphony/assets/css/src/admin.css
+++ b/symphony/assets/css/src/admin.css
@@ -488,22 +488,22 @@ div.password {
 	Index page
 --------------------------------------------------------------------------*/
 
-.page-index h2 {
+[data-page="index"] h2 {
 	border: none;
 }
 
-.page-index form {
+[data-page="index"] form {
 	margin: 0;
 	padding: 0;
 }
 
-.page-index .actions {
+[data-page="index"] .actions {
 	height: 3.8rem;
 	padding: 3rem 1.8rem 0;
 	text-align: right;
 }
 
-.page-index .actions + ul.page {
+[data-page="index"] .actions + ul.page {
 	margin-top: -5.8rem;
 }
 
